working example for Apache Tomcat