@@ -1,164 +1,283 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-  	<groupId>br.com.cdi</groupId>
-  	<artifactId>builder</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-	<relativePath>../pom.xml</relativePath>
-  </parent>
-  <packaging>war</packaging>
-  <artifactId>OwbWebCDI</artifactId>
-  <name>OwbWebCDI</name>
-  
-  <properties>
-   	<jsf-myfaces.version>2.2.4</jsf-myfaces.version>
-    <tomee.additional.args></tomee.additional.args>
-    <tomee.version>1.6.0</tomee.version>
-    <tomee.mavenplugin.version>${tomee.version}</tomee.mavenplugin.version>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>br.com.cdi</groupId>
+        <artifactId>builder</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <packaging>war</packaging>
+    <artifactId>OwbWebCDI</artifactId>
+    <name>OwbWebCDI</name>
 
-    <projectstage>Development</projectstage>
-  </properties>
+    <properties>
+        <jsf-myfaces.version>2.2.4</jsf-myfaces.version>
+        <tomee.additional.args></tomee.additional.args>
+        <tomee.version>1.6.0</tomee.version>
+        <tomee.mavenplugin.version>${tomee.version}</tomee.mavenplugin.version>
 
-	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>OwbBusinessCDI</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <owb.scoped>provided</owb.scoped>
 
-		<!-- Web dependency	<version>2.2.2</version> -->
-		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>javax.el-api</artifactId>
-			<version>3.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		
-		<!-- API para servlet --> 
-		<dependency>  
-			<groupId>javax.servlet</groupId>  
-			<artifactId>javax.servlet-api</artifactId>  
-			<version>${javax.servlet-api-version}</version>  
-			<scope>provided</scope>  
-		</dependency>         
-	
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.2.1</version>
-			<scope>provided</scope>
-		</dependency>
+        <projectstage>Development</projectstage>
+    </properties>
 
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-			<scope>provided</scope>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>OwbBusinessCDI</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		
-		<!-- **************************************************** Myfaces JSF api 
-			Evitar este erro: WebBeans context with scope type annotation @FlowDefinition does not exist within current thread
-			Para evitar esse erro, trocar a implementacao Mojarra pelas duas libs abaixo-
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-api</artifactId>
-			<version>${jsf-myfaces.version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-impl</artifactId>
-			<version>${jsf-myfaces.version}</version>
-			<scope>compile</scope>
-		</dependency>
-		-->	
-		           
-		<!-- Mojarra JSF Dependencies
-		Summarized, your classpath and library management is a complete mess and there are two solutions:
-		If you want to stick to Tomcat 6.0, you should be using JSF 2.0 (not 2.1) and you should be using Servlet 2.5 and JSP 2.1 (not Servlet 3.0 nor JSP 2.2 nor Java EE 5 nor 6).
-		If you want to use JSF 2.1, then you should upgrade Tomcat to 7.0 and you should be using Servlet 3.0 and JSP 2.2 (not Java EE 6).
-		The third solution is to get rid of Maven altogether and control the libraries yourself, but I would then probably step into toes of Maven fans.
-		-->
-
-		 <!-- Jstl  dependencies -->
-		 <dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		
-		<!-- Implementacao Mojarra JSF da sun  -->
-		<dependency>  
-		    <groupId>com.sun.faces</groupId>  
-		    <artifactId>jsf-api</artifactId>  
-		    <version>2.2.6</version>
+        <!-- Web dependency	<version>2.2.2</version> -->
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
             <scope>provided</scope>
-		</dependency>  
-		 
-<!--
-		<dependency>
-		    <groupId>com.sun.faces</groupId>  
-		    <artifactId>jsf-impl</artifactId>  
- 		    <version>2.2.6</version>
-		</dependency>
--->
+        </dependency>
 
-		
-		<!-- Primefaces JSF Dependencies -->
-		<dependency>  
-			<groupId>org.primefaces</groupId>  
-			<artifactId>primefaces</artifactId>  
-			<version>4.0</version>  
-		</dependency>  
-		
-		
-	</dependencies>
+        <!-- API para servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet-api-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.2.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <!-- **************************************************** Myfaces JSF api
+            Evitar este erro: WebBeans context with scope type annotation @FlowDefinition does not exist within current thread
+            Para evitar esse erro, trocar a implementacao Mojarra pelas duas libs abaixo-
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>${jsf-myfaces.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>${jsf-myfaces.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+
+        <!-- Mojarra JSF Dependencies
+        Summarized, your classpath and library management is a complete mess and there are two solutions:
+        If you want to stick to Tomcat 6.0, you should be using JSF 2.0 (not 2.1) and you should be using Servlet 2.5 and JSP 2.1 (not Servlet 3.0 nor JSP 2.2 nor Java EE 5 nor 6).
+        If you want to use JSF 2.1, then you should upgrade Tomcat to 7.0 and you should be using Servlet 3.0 and JSP 2.2 (not Java EE 6).
+        The third solution is to get rid of Maven altogether and control the libraries yourself, but I would then probably step into toes of Maven fans.
+        -->
+
+        <!-- Jstl  dependencies -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- Implementacao Mojarra JSF da sun  -->
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+             <version>2.2.6</version>
+        </dependency>
+
+
+        <!-- Primefaces JSF Dependencies -->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>4.0</version>
+        </dependency>
+
+
+        <!-- OWB deps -->
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-atinject_1.0_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+
+    </dependencies>
 
     <build>
         <finalName>owbCdi</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>${tomee.mavenplugin.version}</version>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
-                    <tomeeVersion>${tomee.version}</tomeeVersion>
-                    <tomeeClassifier>webprofile</tomeeClassifier>
-                    <config>${project.build.directory}/tomee/conf</config>
-                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
-
-                    <!-- removed the .war extension from the "warFile" property, so we can use exploded archives -->
-                    <warFile>${project.build.directory}/${project.build.finalName}</warFile>
-                    <!-- path that is used by tomEE in the tomee:deploy and tomee:undeploy goal -->
-                    <path>${project.build.directory}/apache-tomee/webapps${project.build.finalName}</path>
-                    <!-- memory settings for tomEE; increased PermGen from default 64m to 512m, should allow for more
-                    redeploys without PermGenExceptions -->
-                    <args>-Dorg.apache.deltaspike.ProjectStage=${projectstage} -Djavax.faces.PROJECT_STAGE=${projectstage} -Djava.awt.headless=true -Dfile.encoding=UTF-8 -server -Xms1024m -Xmx1024m -XX:NewSize=512m -XX:MaxNewSize=384m -XX:PermSize=384m -XX:MaxPermSize=512m -XX:+DisableExplicitGC ${tomee.additional.args}
-                    </args>
-
-                    <libs>
-                        <lib>remove:myfaces-api</lib>
-                        <lib>remove:myfaces-impl</lib>
-                        <lib>com.sun.faces:jsf-api:2.2.6</lib>
-                        <lib>com.sun.faces:jsf-impl:2.2.6</lib>
-                    </libs>
-
+                    <!-- this context config has to be set in your tomcat installation -->
+                    <contextFile>${project.basedir}/src/main/tomcat/context.xml</contextFile>
                 </configuration>
                 <dependencies>
+                    <!-- just to be able to define the tomcat version -->
                     <dependency>
-                        <groupId>org.apache.openejb</groupId>
-                        <artifactId>apache-tomee</artifactId>
-                        <version>${tomee.version}</version>
-                        <classifier>webprofile</classifier>
-                        <type>zip</type>
-                        <!-- we have to set this to runtime, else it does not work -->
-                        <scope>runtime</scope>
+                        <groupId>org.apache.tomcat.embed</groupId>
+                        <artifactId>tomcat-embed-core</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-util</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-coyote</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-api</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jdbc</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-dbcp</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-servlet-api</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jsp-api</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jasper</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jasper-el</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-el-api</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-catalina</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-tribes</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-catalina-ha</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-annotations-api</artifactId>
+                        <version>${tomcat7.version}</version>
+                    </dependency>
+
+
+                    <!-- OWB deps -->
+                    <dependency>
+                        <groupId>org.apache.geronimo.specs</groupId>
+                        <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.geronimo.specs</groupId>
+                        <artifactId>geronimo-atinject_1.0_spec</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.geronimo.specs</groupId>
+                        <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.openwebbeans</groupId>
+                        <artifactId>openwebbeans-impl</artifactId>
+                        <version>${owb.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.openwebbeans</groupId>
+                        <artifactId>openwebbeans-spi</artifactId>
+                        <version>${owb.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.openwebbeans</groupId>
+                        <artifactId>openwebbeans-web</artifactId>
+                        <version>${owb.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.openwebbeans</groupId>
+                        <artifactId>openwebbeans-tomcat7</artifactId>
+                        <version>${owb.version}</version>
                     </dependency>
 
                 </dependencies>
+
             </plugin>
 
         </plugins>
